--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
     "name": "first-react-native-app",
+    "sheme": "first-react-native-app",
     "slug": "first-react-native-app",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -22,6 +23,10 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router",
+      "expo-font"
+    ]
   }
 }
