--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "appwrite": "^15.0.0",
     "expo": "~51.0.9",
     "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.6",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-appwrite": "^0.4.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "expo-font": "~12.0.6"
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
