--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "appwrite": "^15.0.0",
     "expo": "~51.0.9",
+    "expo-av": "~14.0.5",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.6",
     "expo-linking": "~6.3.1",
@@ -19,6 +20,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.4.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
@@ -26,7 +28,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.3.2"
+    "@types/react": "^18.3.3",
+    "@types/react-native": "^0.73.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.4.5"
   },
   "private": true
 }
