--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "~51.0.9",
     "expo-av": "~14.0.5",
     "expo-constants": "~16.0.2",
+    "expo-document-picker": "^12.0.1",
     "expo-font": "~12.0.6",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
