--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-constants": "~16.0.2",
     "expo-document-picker": "^12.0.1",
     "expo-font": "~12.0.6",
+    "expo-image-picker": "^15.0.5",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
